--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,12 @@
-LTLIBRARIES = libredis_ipc.la
+lib_LTLIBRARIES = libredis_ipc.la
 
-libredis_ipc_la_SOURCES = redis_ipc.h \
-	redis_ipc.c
+#pkginclude_HEADERS = inc/json.hh
+
+libredis_ipc_la_SOURCES = redis_ipc.c
+include_HEADERS = redis_ipc.h inc/json.hh
+
+#libredis_ipc_la_SOURCES = redis_ipc.h \
+#	redis_ipc.c
 
 libredis_ipc_la_CPPFLAGS = -I$(includedir)
 libredis_ipc_la_CFLAGS = -std=gnu99 $(HIREDIS_CFLAGS)
@@ -9,5 +14,4 @@ libredis_ipc_la_LIBADD = $(HIREDIS_LIBS)
 libredis_ipc_la_LDFLAGS = $(HIREDIS_LDFLAGS)
 #libredis_ipc_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = redis_ipc.h
 
