now enable the tests
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,8 +109,10 @@ jobs:
         if: runner.os == 'MacOS' &&  matrix.compiler == 'xcode' 
         run: |
           make
+          make check
 
       - name: Build and test MacOS gcc
         if: runner.os == 'MacOS' &&  matrix.compiler == 'gcc'
         run: |
           make
+          make check
