enable coverage with html default report, add to smoke workflow
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -64,9 +64,19 @@ jobs:
       run: |
         make check
 
+    - name: Generate coverage
+      run: |
+        ./configure --with-coverage
+        make clean
+        make cov
+
     - name: Cleanup
       run: |
         killall redis-server
+
+    - uses: codecov/codecov-action@v2
+      with:
+        verbose: true
 
   check:
     name: Collect metrics
