--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -99,10 +99,14 @@ jobs:
       with:
         fetch-depth: 0
 
-    - uses: sarnold/cccc-action@main
+    - uses: sarnold/cccc-action@0.2
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         target_branch: gh-pages
+        file_extensions: |
+          .hh
+          .h
+          .c
         source_dirs: |
           src
           inc
