add doctest to pylint workflow, with minimal nose cfg
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -30,3 +30,7 @@ jobs:
     - name: Run pylint
       run: |
         tox -e lint
+
+    - name: Run doctests
+      run: |
+        tox -e py38-linux
