--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: cpplint
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  pylint:
+  cpplint:
 
     runs-on: ubuntu-latest
     defaults:
@@ -22,15 +22,11 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Install tox
+    - name: Install cpplint
       run: |
         python -m pip install --upgrade pip wheel
-        pip install tox tox-gh-actions
+        pip install cpplint
     
-    - name: Run pylint
+    - name: Run cpplint
       run: |
-        tox -e lint
-
-    - name: Run doctests
-      run: |
-        tox -e py38-linux
+        cpplint --output=gsed src/* inc/*
