chg: dev: add pkconfig.in file, update configure.ac
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ SUBDIRS = src test
 ACLOCAL_AMFLAGS         = -I m4 --install
 
 EXTRA_DIST = autogen.sh README.rst debian inc/json.hh
+pkgconfig_DATA = redis-ipc.pc
 
 export top_srcdir
 
