--- a/configure.ac
+++ b/configure.ac
@@ -117,9 +117,12 @@ fi
 AC_DEFINE_UNQUOTED(ENABLE_DEBUG, `enable_value $enable_debug`, [Enable debugging])
 AC_DEFINE_UNQUOTED(ENABLE_GPROF, `enable_value $enable_gprof`, [Enable gcc profiling])
 
+PKG_INSTALLDIR
+
 AC_CONFIG_FILES([Makefile \
                  src/Makefile \
-                 test/Makefile])
+                 test/Makefile \
+                 redis-ipc.pc])
 
 AC_OUTPUT
 
