chg: dev: add pkg-config dep and FindPython module
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ SET(CMAKE_DEBUG_POSTFIX d)
 
 # Ensure proper configuration if in a conda environment
 include(CondaAware)
+# find the active python site-packages path
+include(FindPython)
 
 option(BUILD_SHARED_LIBS "build shared libraries" ON)
 option(BUILD_STATIC_LIBS "Build static libraries" OFF)
