--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -16,6 +16,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - cmake
+    - pkg-config
     - make  # [unix]
 
   host:
