--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -43,7 +43,15 @@ jobs:
 
     - name: install prerequisites
       shell: pwsh
-      run: conda install cmake ninja c-compiler cxx-compiler json-c libhiredis
+      run: >
+        conda install
+        cmake
+        ninja
+        pkg-config
+        c-compiler
+        cxx-compiler
+        json-c
+        libhiredis
 
     - name: print info
       shell: pwsh
@@ -59,5 +67,4 @@ jobs:
         --build-generator "${{ matrix.generator }}"
         --build-and-test . build
         --build-options -DRIPC_DISABLE_SOCK_TESTS=1
-        -DCMAKE_INSTALL_PREFIX:PATH=$env:CONDA_PREFIX
         --test-command ctest -V --build-config "${{ matrix.build_type }}"
