--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -16,13 +16,13 @@ jobs:
       matrix:
         os: ['ubuntu-latest', 'macos-latest']
         # add these later, 'windows-2016', 'windows-2019'
-        python-version: ['3.7']
+        python-version: ['3.7', '3.9']
         include:
           - os: 'ubuntu-latest'
-            generator: 'Ninja'
+            generator: 'Unix Makefiles'
             build_type: 'RelWithDebInfo'
           - os: 'macos-latest'
-            generator: 'Ninja'
+            generator: 'Unix Makefiles'
             build_type: 'RelWithDebInfo'
           #- os: 'windows-2016'
             #generator: 'Visual Studio 15 2017 Win64'
