chg: dev: disable conda-dev and try full conda workflow
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -1,11 +1,11 @@
-name: Conda
+name: CondaDev
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
-  pull_request:
+  #push:
+    #branches:
+      #- master
+  #pull_request:
 
 jobs:
   build:
