--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -12,7 +12,7 @@ build:
   number: 0
   skip: true           # [win and float(vc) < 14]
   run_exports:
-    - {{ pin_subpackage('redis_ipc', max_pin='x.x') }}
+    - {{ pin_subpackage('redis_ipc', max_pin='x') }}
 
 requirements:
   build:
