new: dev: add FindJSONC module, update cmake cfg and recipe
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,16 +44,11 @@ set(WITH_COVERAGE "" CACHE PATH "build with test coverage enabled")
 set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/share/pkgconfig" CACHE PATH "Install directory for pkgconfig (.pc) files")
 set(EXTRA_TARGET_LINK_LIBRARIES)
 
+include(FindJSONC)
+include_directories(${JSONC_INCLUDE_DIRS})
+list(APPEND THIRD_PARTY_LIBS ${JSONC_LIBRARIES})
+
 find_package(PkgConfig)
-
-pkg_check_modules(json-c IMPORTED_TARGET json-c)
-if (json-c_FOUND)
-  list(APPEND THIRD_PARTY_LIBS PkgConfig::json-c)
-else()
-  find_package(json-c)
-  list(APPEND THIRD_PARTY_LIBS json-c)
-endif()
-
 pkg_check_modules(HIREDIS IMPORTED_TARGET hiredis)
 if (HIREDIS_FOUND)
   list(APPEND THIRD_PARTY_LIBS PkgConfig::HIREDIS)
