--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "redis-ipc" %}
 {% set version = "0.0.3" %}
+{% set soversion = "0" %}
 
 package:
   name: {{ name|lower }}
@@ -12,7 +13,7 @@ build:
   number: 0
   skip: true           # [win and float(vc) < 14]
   run_exports:
-    - {{ pin_subpackage('redis-ipc', max_pin='x') }}
+    - {{ pin_subpackage(name, max_pin='x.x') }}
 
 requirements:
   build:
