set install libdir, update host deps and build scripts
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -28,6 +28,9 @@ requirements:
   host:
     - msinttypes  # [win and float(vc) < 14]
     - redis-py
+    - json-c
+    - libhiredis
+    - pthread-stubs  # [not win]
 
 test:
   commands:
