--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -17,8 +17,10 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}  # [not win]
+    - {{ compiler('cxx') }}  # [not win]
+    - vs2017_win-64  # [win64]
+    - vs2017_win-32  # [win32]
     - cmake
     - pkg-config
     - make  # [unix]
@@ -31,12 +33,14 @@ requirements:
     - json-c
     - libhiredis
     - pthread-stubs  # [not win]
+    - pthreads-win32  # [win]
 
 test:
   commands:
-    - ldd ${PREFIX}/lib/libredis_ipc.so  # [linux]
+    - ldd ${PREFIX}/lib/libredis_ipc${SHLIB_EXT}  # [linux]
     - test -f ${PREFIX}/include/redis_ipc.h  # [unix]
-    - test -f ${PREFIX}/lib/libredis_ipc.{{ soversion }}${SHLIB_EXT}  # [osx]
+    - test -f ${PREFIX}/lib/libredis_ipc${SHLIB_EXT}  # [osx]
+    - if not exist %LIBRARY_LIB%\redis_ipc.lib exit 1   # [win]
     - if not exist %PREFIX%\\Library\\include\\redis_ipc.h exit 1  # [win]
     - echo "TODO - Pkg tests require redis server."
 
