--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -2,10 +2,10 @@ name: CondaDev
 
 on:
   workflow_dispatch:
-  #push:
-    #branches:
-      #- master
-  #pull_request:
+  push:
+    branches:
+      - master
+  pull_request:
 
 jobs:
   build:
