dis-able conda dev workflow, debug on macos (segfault)
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -2,10 +2,11 @@ name: CondaDev
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
-  pull_request:
+  #push:
+    #branches:
+      #- master
+      #- develop
+  #pull_request:
 
 jobs:
   build:
