--- a/.github/workflows/cov-test.yml
+++ b/.github/workflows/cov-test.yml
@@ -2,9 +2,9 @@ name: "Coverity"
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 #  schedule:
 #    - cron: '21 20 * * 5'
 
