--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -3,9 +3,9 @@ name: smoke
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
   build:
